syntax = "proto3";

package elys.perpetual;

option go_package = "github.com/elys-network/elys/x/perpetual/types";

import "gogoproto/gogo.proto";

enum Position {
  UNSPECIFIED = 0;
  LONG = 1;
  SHORT = 2;
}

message MTP {
  string address = 1;
  string collateral_asset = 2;
  string trading_asset = 3;
  string liabilities_asset = 4;
  string custody_asset = 5;
  string collateral = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string liabilities = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string borrow_interest_paid_custody = 8 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string borrow_interest_unpaid_liability = 9 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string custody = 10 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string take_profit_liabilities = 11 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string take_profit_custody = 12 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string mtp_health = 13 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  Position position = 14;
  uint64 id = 15;
  uint64 amm_pool_id = 16;
  string take_profit_price = 17 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string take_profit_borrow_factor = 18 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string funding_fee_paid_custody = 19 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string funding_fee_received_custody = 20 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string open_price = 21 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string stop_loss_price = 22 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  uint64 last_interest_calc_time = 23;
  uint64 last_interest_calc_block = 24;
  uint64 last_funding_calc_time = 25;
  uint64 last_funding_calc_block = 26;
}

message InterestBlock {
  string interest_rate = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  int64 block_height = 2;
  int64 block_time = 3;
}

message FundingRateBlock {
  string funding_rate_long = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string funding_rate_short = 2 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string funding_amount_short = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string funding_amount_long = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  int64 block_height = 5;
  int64 block_time = 6;
}

message ToPay {
  string asset_balance = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string asset_denom = 2;
  string address = 3;
  uint64 id = 4;
}

message WhiteList { repeated string validator_list = 1; }

message PositionRequest {
  string address = 1;
  uint64 id = 2;
}